--- a/catalog.html
+++ b/catalog.html
@@ -69,16 +69,14 @@
             <div class="basket-full-form">
               <ul class="basket-list">
                 <li class="basket-list-item">
-                  <img class="basket-item-small" src="img/icecream-1-small.png"
-                  width="33" height="33" alt="">
+                  <img class="basket-item-small" src="img/icecream-1-small.png" width="33" height="33" alt="">
                   <p class="basket-item-description">Пломбир с апельсиновым джемом</p>
                   <p class="basket-item-kg">1,5 кг х
                     <span class="price-per-kg">200 руб.</span></p>
                   <p class="item-total-price">300 руб.</p>
                 </li>
                 <li class="basket-list-item">
-                  <img class="basket-item-small" src="img/icecream-2-small.png"
-                  width="33" height="33" alt="">
+                  <img class="basket-item-small" src="img/icecream-2-small.png" width="33" height="33" alt="">
                   <p class="basket-item-description">Клубничный пломбир с присыпкой
                     из белого шоколада</p>
                   <p class="basket-item-kg">1,5 кг х
@@ -120,12 +118,14 @@
       <div class="container">
         <form class="filters-form">
           <label for="filters-sorting">Сортировка</label>
-          <select id="filters-sorting" class="filters-sorting-select" name="sorting">
-            <option class="sorting-option">по популярности</option>
-            <option class="sorting-option">сначала недорогие</option>
-            <option class="sorting-option">сначала дорогие</option>
-            <option class="sorting-option">по жирности</option>
-          </select>
+          <div class="custom-filters-sorting">
+            <select id="filters-sorting" class="filters-sorting-select" name="sorting">
+              <option class="sorting-option">по популярности</option>
+              <option class="sorting-option">сначала недорогие</option>
+              <option class="sorting-option">сначала дорогие</option>
+              <option class="sorting-option">по жирности</option>
+            </select>
+          </div>
           <label for="filters-pricing">Цена: 100 руб. - 500 руб.</label>
           <input id="filters-pricing" class="filters-pricing-input" type="text" name="pricing" placeholder="100 - 500">
           <fieldset class="filters-fat">
@@ -347,7 +347,7 @@
         <ul class="pagination-list">
           <li class="pagination-cover">
             <a class="pagination-item pagination-item-disabled" href="#"
-            aria-label="Перейти на предыдущую страницу">&lt;</a>
+              aria-label="Перейти на предыдущую страницу">&lt;</a>
           </li>
           <li class="pagination-cover">
             <a class="pagination-item pagination-item-current" href="#" aria-label="Текущая страница">1</a>
