Добавляет кастомный фильтр-селект

--- a/catalog.html
+++ b/catalog.html
@@ -125,6 +125,7 @@
               <option class="sorting-option">сначала дорогие</option>
               <option class="sorting-option">по жирности</option>
             </select>
+            <span class="custom-arrow"></span>
           </div>
           <label for="filters-pricing">Цена: 100 руб. - 500 руб.</label>
           <input id="filters-pricing" class="filters-pricing-input" type="text" name="pricing" placeholder="100 - 500">
