Добавляет ссылки на интенсив в футер. Добавляет эффект при наведении для карточки товара на главной странице.

--- a/catalog.html
+++ b/catalog.html
@@ -407,9 +407,13 @@
         <li class="menu-item"><a class="link-default" href="#">Экологические стандарты</a></li>
       </ul>
       <div class="made-in">
-        <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="">
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="">
+        </a>
         <p class="made-in-text">Сделано в
-          <span class="made-in-htmlacademy">HTML Academy © 2019</span>
+          <a class="made-in-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">
+            HTML Academy © 2019
+          </a>
         </p>
       </div>
     </div>
