--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
             </div>
             <p class="hit-text">Сливочное с апельсиновым джемом и
               цитрусовой стружкой</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="hit-item">
             <img class="icecream-image" src="img/icecream-2.jpg" width="267" height="267" alt="">
@@ -152,6 +155,9 @@
               <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
             </div>
             <p class="hit-text">Сливочно-кофейное с кусочками шоколада </p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="hit-item">
             <img class="icecream-image" src="img/icecream-3.jpg" width="267" height="267" alt="">
@@ -162,6 +168,9 @@
             </div>
             <p class="hit-text">Сливочно-клубничное с присыпкой из
               белого шоколада</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
           <li class="hit-item">
             <img class="icecream-image" src="img/icecream-4.jpg" width="267" height="267" alt="">
@@ -172,6 +181,9 @@
             </div>
             <p class="hit-text">Сливочное крем-брюле с карамельной
               подливкой</p>
+            <div class="item-card">
+              <a class="button quick-view-button" href="#">Быстрый просмотр</a>
+            </div>
           </li>
         </ul>
       </div>
@@ -291,9 +303,13 @@
         <li class="menu-item"><a class="link-default" href="#">Экологические стандарты</a></li>
       </ul>
       <div class="made-in">
-        <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="">
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="">
+        </a>
         <p class="made-in-text">Сделано в
-          <span class="made-in-htmlacademy">HTML Academy © 2019</span>
+          <a class="made-in-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">
+            HTML Academy © 2019
+          </a>
         </p>
       </div>
     </div>
@@ -304,8 +320,7 @@
       <div class="container">
         <div class="modal-title-wrapper">
           <h2 class="modal-title">Мы обязательно вам ответим!</h2>
-          <button class="modal-close" type="button" aria-label="Закрыть форму обратной связи"
-          onclick="modalClose()">
+          <button class="modal-close" type="button" aria-label="Закрыть форму обратной связи" onclick="modalClose()">
             <img src="img/close-cross.svg" width="18" height="17" alt="">
           </button>
         </div>
