Добавляет интерактивную карту

--- a/catalog.html
+++ b/catalog.html
@@ -116,7 +116,7 @@
     <section class="filters">
       <h2 class="visually-hidden">Секция фильтров</h2>
       <div class="container">
-        <form class="filters-form">
+        <form class="filters-form" action="https://echo.htmlacademy.ru" method="get">
           <label for="filters-sorting">Сортировка</label>
           <div class="custom-filters-sorting">
             <select id="filters-sorting" class="filters-sorting-select" name="sorting">
@@ -211,7 +211,7 @@
               </li>
             </ul>
           </fieldset>
-          <button class="filters-button">Применить</button>
+          <button class="filters-button" type="submit">Применить</button>
         </form>
       </div>
     </section>
