--- a/index.html
+++ b/index.html
@@ -254,7 +254,10 @@
     </section>
     <section class="contacts">
       <h2 class="visually-hidden">Секция контактов</h2>
-      <div class="map"></div>
+      <div class="map" aria-label="Наш адрес: Санкт-Петербург,
+      ул. Б. Конюшенная, д. 19/8">
+        <iframe src="https://yandex.ru/map-widget/v1/-/CCC3fJLg"></iframe>
+      </div>
       <div class="container business-card-aligner">
         <div class="business-card">
           <p class="card-adresstext">Адрес главного офиса
