Добавляет стилизацию ценового фильтра

--- a/catalog.html
+++ b/catalog.html
@@ -127,8 +127,18 @@
             </select>
             <span class="custom-arrow"></span>
           </div>
-          <label for="filters-pricing">Цена: 100 руб. - 500 руб.</label>
-          <input id="filters-pricing" class="filters-pricing-input" type="text" name="pricing" placeholder="100 - 500">
+          <fieldset class="filter-price">
+            <legend>Цена: 100 руб. – 500 руб.</legend>
+            <div class="range-filter">
+              <div class="range-controls">
+                <div class="scale">
+                  <div class="bar"></div>
+                </div>
+                <div class="toggle toggle-min"></div>
+                <div class="toggle toggle-max"></div>
+              </div>
+            </div>
+          </fieldset>
           <fieldset class="filters-fat">
             <legend class="fat-title">Жирность:</legend>
             <ul class="filters-fat-list">
