Группирует фильтры сортировки

--- a/catalog.html
+++ b/catalog.html
@@ -115,7 +115,7 @@
     </section>
     <section class="filters">
       <h2 class="visually-hidden">Секция фильтров</h2>
-      <div class="container">
+      <div class="container container-spacebetween">
         <form class="filters-form" action="https://echo.htmlacademy.ru" method="get">
           <label for="filters-sorting">Сортировка</label>
           <div class="custom-filters-sorting">
