Правит отступы для главной страницы

--- a/index.html
+++ b/index.html
@@ -204,16 +204,17 @@
               </li>
               <li class="feature-item">
                 <img class="seo-feature-icon" src="img/cow-icon.svg" width="49" height="49" alt="">
+                <p class="feature-description">Закупка ингредиентов производится только
+                  у проверенных фермерских хозяйств и компаний, с которыми нас связывает
+                  долговременное сотрудничество.</p>
+
+              </li>
+              <li class="feature-item">
+                <img class="seo-feature-icon" src="img/leaf-icon.svg" width="49" height="49" alt="">
                 <p class="feature-description">Для приготовления мороженого используются
                   настоящие сливки и молоко высочайшего качества. Все дополнительные
                   ингредиенты и добавки произведены из натурального, экологически
                   чистого сырья.</p>
-              </li>
-              <li class="feature-item">
-                <img class="seo-feature-icon" src="img/leaf-icon.svg" width="49" height="49" alt="">
-                <p class="feature-description">Закупка ингредиентов производится только
-                  у проверенных фермерских хозяйств и компаний, с которыми нас связывает
-                  долговременное сотрудничество.</p>
               </li>
               <li class="feature-item">
                 <img class="seo-feature-icon" src="img/thermo-icon.svg" width="49" height="49" alt="">
@@ -257,7 +258,7 @@
         <h2 class="visually-hidden">Секция контактов</h2>
         <div class="map" aria-label="Наш адрес: Санкт-Петербург,
       ул. Б. Конюшенная, д. 19/8">
-          <iframe src="https://yandex.ru/map-widget/v1/-/CCC3fJLg"></iframe>
+          <!-- <iframe src="https://yandex.ru/map-widget/v1/-/CCC3fJLg"></iframe> -->
         </div>
         <div class="container business-card-aligner">
           <div class="business-card">
@@ -302,8 +303,8 @@
         </ul>
         <ul class="menu">
           <li class="menu-item"><a class="link-default" href="#">Для поставщиков</a></li>
-          <li class="menu-item"><a class="link-default" href="#">О производстве</a></li>
           <li class="menu-item"><a class="link-default" href="#">Наши документы</a></li>
+          <li class="menu-item"><a class="link-default" href="#">О производстве</a></li>
           <li class="menu-item"><a class="link-default" href="#">Экологические стандарты</a></li>
         </ul>
         <div class="made-in">
