Добавляет задержку выпадающим окнам

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="img/logo.png" width="154" height="64" alt="Глейси">
           </a>
           <ul class="site-navigation">
-            <li class="navigation-item catalog" onclick="myFunction()"><a href="#">Каталог</a>
+            <li class="navigation-item catalog"><a href="#">Каталог</a>
               <ul class="catalog-list">
                 <li class="catalog-list-item">
                   <a class="" href="#">Новинки</a>
