Правит отступы модальной формы. Добавлены вендорные префиксы. Минифицированы стилевой файл и скрипт

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>HTML Academy: Глейси</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -258,7 +258,7 @@
         <h2 class="visually-hidden">Секция контактов</h2>
         <div class="map" aria-label="Наш адрес: Санкт-Петербург,
       ул. Б. Конюшенная, д. 19/8">
-          <!-- <iframe src="https://yandex.ru/map-widget/v1/-/CCC3fJLg"></iframe> -->
+          <iframe src="https://yandex.ru/map-widget/v1/-/CCC3fJLg"></iframe>
         </div>
         <div class="container business-card-aligner">
           <div class="business-card">
@@ -268,7 +268,8 @@
             <p class="card-teltext">Для заказов по телефону:</p>
             <a class="card-tel" href="tel:8-812-450-25-25">8 812 450-25-25</a>
             <p class="card-schedule">(с 10 до 20 ежедневно)</p>
-            <a class="button modal-writeus" href="#" onclick="on()">Форма обратной связи</a>
+            <a class="button modal-writeus" href="contact-form.html" aria-label="Вызвать форму обратной связи"
+             onclick="on()">Форма обратной связи</a>
           </div>
         </div>
       </section>
@@ -348,7 +349,7 @@
       </div>
     </div>
   </div>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
